# PC2SleepService

./: .gitignore  README.md  pyproject.toml
docs/ai/: api.md  architecture.md  components.md  conventions.md  index.md
scripts/: build_exe.cmd  build_exe.ps1
src/pc2sleep/: __init__.py  __main__.py  actions.py  autostart.py  config.py  network.py  server.py  single_instance.py
src/pc2sleep/ui/: __init__.py  countdown.py  icon.py  tray.py
tests/: conftest.py  test_config.py  test_network.py  test_server.py
