[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pc2sleep"
version = "1.0.0"
description = "HTTP service for remote sleep/shutdown on Windows 11 with countdown UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "comtypes>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[project.scripts]
pc2sleep = "pc2sleep.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
